Styles added for client table: removed bug with header shifts

--- a/source/pages/ClientHotOperationsPage/ClientsContainer/styles.m.css
+++ b/source/pages/ClientHotOperationsPage/ClientsContainer/styles.m.css
@@ -1,3 +1,26 @@
+.table {
+    background-color: white;
+    min-width: 0 !important;
+}
+
+.table :global(.ant-table-header) {
+    text-transform: uppercase;
+    min-width: 0 !important; /*IMPORTANT it solves antd table issue when scrolling is added*/
+    font-size: 0.8em;
+    font-style: bold;
+    padding: 0;
+}
+
+.table :global(.ant-pagination) {
+    float: none;
+    justify-content: center;
+    display: flex;
+}
+
+.table :global(th) {
+    padding: 6px 4px 6px 4px !important; /*Remove bug: when text overflows, header shifts left*/
+}
+
 .clientPhone {
     color: var(--link);
     padding: 4px;
